[gd_scene load_steps=4 format=2]

[ext_resource path="res://level/Level.gd" type="Script" id=1]
[ext_resource path="res://gui/GUI.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Chunks" type="Node2D" parent="."]

[node name="Player" type="Area2D" parent="."]
position = Vector2( 288, 150 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Player"]
z_index = 3
color = Color( 0, 0.929412, 1, 1 )
polygon = PoolVector2Array( -1.68713, -23.2554, -17.3142, -10.277, -17.0493, 8.52846, -1.68713, 23.3609, 15.5291, 9.32306, 14.9994, -7.36348 )

[node name="GUI" parent="." instance=ExtResource( 2 )]

[node name="SpeedUpTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_SpeedUpTimer_timeout"]
